# MIND_Sim

./: .gitignore  .gitmodules  CMakeLists.txt  Copyright  README.md  pyproject.toml
.github/workflows/: python-publish.yml  release.yml
cmake/: MindSimBuildConfig.cmake  MindSimDependencies.cmake  MindSimMechanisms.cmake  MindSimModCodegen.cmake  MindSimPythonModule.cmake  MindSimSources.cmake  MindSimTests.cmake  write_modl_reg.cmake
examples/: README.md
examples/ca3_epilepsy_cosim/: .gitignore  README.md  SOURCE_NOTE.md  WHOLE_BRAIN_CA3_PIPELINE.md  allinone.sh  build_hybrid_ca3_parcellation.py  ca3_mind_sim_api.py  compare_allinone.py  compare_ca3_validation.py  compare_mindsim_tvb_multiscale.py  connectome_csv_to_mindsim_npz.py  fetch_modeldb_186768.py  requirements-tvb-neuron.txt  run_ca3_micro_only_compare.py  run_ca3_neuron_export.py  run_ca3_nmda_scan_validation.py  run_ca3_original_validation.py  run_macro_only_validation.py  run_tvb_multiscale_vep_ca3_reference.py  run_tvb_netpyne_multiscale_validation.py  run_vep_ca3_cosim.py
examples/ca3_epilepsy_cosim/data/: freesurfer_color_lut.tsv  synthetic_hybrid_ca3_connectivity.csv
examples/ca3_epilepsy_cosim/mind_mod/: ca3_input_coupling.mod  ca3_input_to_spikes.mod  ca3_paper_background_to_spikes.mod  ca3_spikes_to_vep.mod  ca3_zero_micro_output.mod  vep_x_coupling.mod
examples/ca3_epilepsy_cosim/mind_sim/: plot_tvb_netpyne_ca3_cosim.py  prepare_hcp100206_ca3.py  run_vep_ca3_cosim.py  validate_tvb_netpyne_ca3_cosim.py
examples/ca3_epilepsy_cosim/mind_sim/bridge/: ca3_spikes_to_vep.mod
examples/ca3_epilepsy_cosim/mind_sim/mod/: MyExp2SynNMDABB.mod  README.md  ca3_bas_spikes_to_vep.mod  ca3_input_macro2macro.mod  ca3_input_to_spikes.mod  ca3_olm_spikes_to_vep.mod  ca3_pyr_spikes_to_vep.mod  tvb_epileptor2d.mod  vep_x_macro2macro.mod
examples/ca3_epilepsy_cosim/netpyne_tvb_multiscale/: run_tvb_netpyne_ca3_cosim.py
examples/ca3_epilepsy_cosim/netpyne_tvb_multiscale/mod/: vecevent.mod
examples/ca3_epilepsy_cosim/neuron_tvb/: run_tvb_neuron_ca3_cosim.py
examples/ca3_epilepsy_cosim/neuron_tvb/mod/: README.md
examples/cosim_arbor_hhplus/: README.md  run_micro_only_coreneuron.py  run_micro_only_mind_sim.py  run_mind_sim.py
examples/cosim_arbor_hhplus/mind_mod/: h_to_netcon.mod  mean_h_input.mod  rww_s_coupling.mod  spikes_to_exposure.mod
examples/cosim_arbor_hhplus/mod/: hhplus.mod  hhplustoggle.mod
examples/hl23_frontend_acceleration/: .gitignore  README.md  allinone.sh  compare_frontend.py  run_coreneuron_hl23.py  run_mind_sim_hl23.py
examples/hl23_frontend_acceleration/assets/: README.md
examples/hl23_frontend_acceleration/assets/hoc_templates/: HL23PV.full.hoc  HL23PYR.axon.hoc  HL23SST.axon.hoc  HL23VIP.bpo.hoc
examples/hl23multi/: run_mind_sim.py  run_nrn_coreneuron.py
examples/hl23multi/hl23_minimal/: NeuronTemplate_full.hoc  README.md  SOURCE_NOTE.md  biophys_HL23PV.hoc  export_via_neuron.py
examples/netpyne_arbor_hhplus/: README.md  run_netpyne.py
examples/netpyne_arbor_hhplus/mod/: hhplustoggle.mod
examples/neural_field_tvb_compare/: run_compare.py
packaging/python/: README.md  build_manylinux_image.bash  build_wheels.bash  check_wheel_install.py  test_wheel.sh
packaging/python/manylinux/: Dockerfile
src/bridge/sim/: interfaces.cpp  interfaces.hpp  rule_codegen.cpp  rule_codegen.hpp
src/cosim/: hybrid_simulator.cpp  hybrid_simulator.hpp  types.hpp
src/cosim/bridge/: interfaces.cpp  interfaces.hpp
src/cosim/transform/: interfaces.cpp  interfaces.hpp
src/io/: result_hdf5.cpp  result_hdf5.hpp
src/macro/frontend/: connectivity.cpp  connectivity.hpp  local_connectivity.cpp  local_connectivity.hpp  network.cpp  network.hpp  network_field.cpp  network_micro.cpp  node_to_roi_map.cpp  node_to_roi_map.hpp
src/macro/sim/: model.cpp  model.hpp  rule_codegen.cpp  rule_codegen.hpp  runtime.cpp  runtime.hpp  runtime_core.cpp  runtime_core.hpp  types.hpp
src/micro/frontend/: label_utils.hpp  model.cpp  model.hpp  model_runtime.cpp
src/micro/mod_compiler/: build_embedded_nmodl.py  mind_modcc.py
src/micro/sim/: core_neuron_data.cpp  core_neuron_data.hpp  coreneuron_host_support.cpp  coreneuron_host_support.hpp  device.cpp  device.hpp  mechanism_runtime.cpp  mechanism_runtime.hpp  micro_runtime.cpp  micro_runtime.hpp  nrn_registration_mirror.hpp  recording.cpp  recording.hpp  types.hpp
src/mind_mod/: abi.hpp  rule_mod.cpp  rule_mod.hpp  rule_mod_analyzer.cpp  rule_mod_codegen.cpp  rule_mod_internal.hpp  rule_mod_parser.cpp
src/mod/: abi.hpp  mind_nrnivmodl.cpp  rule_api.hpp  rule_registry.hpp
src/python_api/bindings/: bindings.hpp  bindings_io.cpp  bindings_macro.cpp  bindings_micro.cpp  bindings_rules.cpp  module.cpp  network_builder.cpp  network_builder.hpp
src/python_api/mind_sim/: __init__.py  _codegen.py  _io.py  _network.py  _vector.py  cli.py
src/utils/: dynamic_library.cpp  dynamic_library.hpp  rule_source_common.hpp
tests/macro/: connectivity_loader_check.py  coupling_check.py  explicit_rule_fields_check.py  neural_field_check.py  neural_field_global_coupling_check.py  node_to_roi_map_file_check.py
tests/micro/: arbor_hhplus_check.py  arbor_hhplus_recurrent_check.py  custom_ion_check.py  external_spike_input_reuse_check.py  ion_channel_check.py  ion_register_check.py  mod_global_parameter_check.py
tests/micro/coreneuron/: test_array_variables_transfer.py  test_datareturn.py  test_direct.py  test_nmodlrandom_syntax.py  test_spikes.py  test_units.py  test_watchrange.py
tests/micro/cover/: test_netcvode.py
tests/micro/datahandle/: test_token.py
tests/micro/mod/: axial.inc  green.mod  red.mod  unitstest.mod  version_macros.mod  watchrange.mod  watchrange2.mod  xchan.mod
tests/micro/mod_global/: globalparam.mod
tests/micro/mod_ion_register/: clchan.mod
tests/micro/parallel_tests/: test_bas.py
tests/micro/pytest/: test_nrntest_thread.py
tests/micro/pytest_coreneuron/: test_bbss.py  test_imem.py  test_loadbal.py  test_netpar.py  test_nlayer.py  test_nrnste.py  test_partrans.py  test_swc.py  test_vector_api.py  test_version_macros.py
(+105 files in other folders)
